set (SRC_FILES messages.c)


FIND_PACKAGE(fca REQUIRED)
INCLUDE_DIRECTORIES(${fca_INCLUDE_DIRECTORY})

add_library(pfanalyzer ${SRC_FILES})

install (TARGETS pfanalyzer DESTINATION lib)

  set (BUILD_PYTHON_ANALYZER_API True CACHE BOOL
      "Build Python Analyzer API to build analyzer modules in python")

IF( BUILD_PYTHON_ANALYZER_API )

  FIND_PACKAGE(SWIG REQUIRED)
  FIND_PACKAGE(PythonLibs 2.7.0 REQUIRED)
FIND_PACKAGE(NumPy REQUIRED)


  SET(NUMPY_I_PATH ${NUMPY_INCLUDE_DIRS}/../../../instant/swig CACHE PATH "Path to numpy.i")
IF(NOT EXISTS ${NUMPY_I_PATH}/numpy.i)
	Message(SEND_ERROR "Cannot find numpy.i in ${NUMPY_I_PATH} which is needed for the Python Analyzer API")
ENDIF(NOT EXISTS ${NUMPY_I_PATH}/numpy.i)



set_source_files_properties(${SRC_FILES} PROPERTIES COMPILE_FLAGS -fPIC)
INCLUDE(UseSWIG)

IF ("${ADDITIONAL_NUMPY_INCLUDE_PATH}" STREQUAL "")
	FIND_PATH(ADDITIONAL_NUMPY_INCLUDE_PATH:PATH "numpy/arrayobject.h" HINTS ${PYTHON_INCLUDE_PATH})
ENDIF()


  INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH}
      ${ADDITIONAL_NUMPY_INCLUDE_PATH}
      ${CMAKE_CURRENT_SOURCE_DIR}
      ${NUMPY_I_PATH}
      )

  SET(CMAKE_SWIG_FLAGS "")
IF (COMMAND SWIG_ADD_LIBRARY)
  SWIG_ADD_LIBRARY(pypfAnalyzer LANGUAGE python SOURCES pypfAnalyzer.i pypfAnalyzer.c)
ELSE (COMMAND SWIG_ADD_LIBRARY)
  SWIG_ADD_MODULE(pypfAnalyzer python pypfAnalyzer.i pypfAnalyzer.c)
ENDIF (COMMAND SWIG_ADD_LIBRARY)
SWIG_LINK_LIBRARIES(pypfAnalyzer ${PYTHON_LIBRARIES} pfanalyzer ${fca_LIBRARY})

  STRING(REGEX REPLACE "([0-9]+)\\.([0-9]+)\\.[0-9]+" "\\1;\\2"
      RESULT ${PYTHONLIBS_VERSION_STRING})

  list(GET RESULT 0 PYTHON_MAJOR_VERSION)
list(GET RESULT 1 PYTHON_MINOR_VERSION)

  INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/_pypfAnalyzer.so
      ${CMAKE_CURRENT_BINARY_DIR}/pypfAnalyzer.py
      DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/python${PYTHON_MAJOR_VERSION}.${PYTHON_MINOR_VERSION})

ENDIF( BUILD_PYTHON_ANALYZER_API )
